--- a/src/main/resources/static/upload.html
+++ b/src/main/resources/static/upload.html
@@ -3,7 +3,7 @@
 <head><title>파일 업로드 테스트</title></head>
 <body>
 <h2>MinIO에 파일 업로드 테스트</h2>
-<form action="http://localhost:8080/upload" method="post" enctype="multipart/form-data">
+<form action="http://localhost:8080/files/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="file" required />
     <button type="submit">업로드</button>
 </form>
