bug : #162 도서 등록 폼에서 main-category에 해당하는 id 제거

--- a/src/main/resources/static/registerbook.html
+++ b/src/main/resources/static/registerbook.html
@@ -61,7 +61,7 @@
     <div class="form-group">
       <label>카테고리</label>
       <div style="display: flex; gap: 10px;">
-        <select id="main-category" name="main-category" style="flex: 1;">
+        <select id="main-category" style="flex: 1;">
           <option value="">-- 대분류 선택 --</option>
         </select>
         <select id="sub-category" name="categoryId" style="flex: 1;" disabled>
