feat : #165 도서 관리 페이지 추가

--- a/src/main/resources/static/adminbooks.html
+++ b/src/main/resources/static/adminbooks.html
@@ -66,7 +66,7 @@
               <p><strong>정가:</strong> ${book.regularPrice.toLocaleString()}원</p>
               <p><strong>판매가:</strong> ${book.salePrice.toLocaleString()}원</p>
               <p><strong>선물포장:</strong> ${book.isGiftWrap ? '가능' : '불가능'}</p>
-              <p><strong>내용 요약:</strong> ${book.contents}</p>
+              <p><strong>목차:</strong> ${book.contents}</p>
               <p><strong>상세 설명:</strong> ${book.description}</p>
             </div>
           `;
