fix : api 요청 경로 수정(admin Controller와 분리)

--- a/src/main/resources/static/adminbooks.html
+++ b/src/main/resources/static/adminbooks.html
@@ -41,7 +41,7 @@
 <div id="book-list">로딩 중...</div>
 
 <script>
-    fetch('/admin/books')
+    fetch('/books')
         .then(response => response.json())
         .then(data => {
             const container = document.getElementById('book-list');
